<resources>
    <string name="app_name">Artaku</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nama</string>
    <string name="prompt_tanggal_lahir">Tanggal Lahir</string>
    <string name="prompt_gender">Jenis Kelamin</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="error_invalid_email">Alamat email tersebut tidak valid</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_field_required">Harus diisi</string>
    <string name="permission_rationale">"Perijinan Kontak harus diijinkan untuk menggunakan autocomplete email."</string>
    <string name="masuk_teks">Masuk</string>
    <string name="daftar_teks">Daftar</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="daftar_dengan_google">Daftar dengan Google</string>

    <string-array name="list_gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fitur_teks">Catat keuangan Anda dengan mudah.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_pra_login_register">PraLoginRegister</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>