<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#639AA6"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!--Backup Front Page sebelum login atau daftar-->
    <!--<TextView-->
    <!--android:id="@+id/judul_aplikasi_pertamakali"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignStart="@+id/gambar_utama_pertamakali"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_marginStart="0dp"-->
    <!--android:layout_marginTop="108dp"-->
    <!--android:text="Artaku"-->
    <!--android:textColor="#FFFFFF"-->
    <!--android:textSize="48sp"-->
    <!--android:textStyle="" />-->

    <!--<ImageView-->
    <!--android:id="@+id/gambar_utama_pertamakali"-->
    <!--android:contentDescription="Ikon keuangan"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="209dp"-->
    <!--android:src="@drawable/accounting" />-->

    <ImageButton
        android:background="@drawable/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/daftar_indikator"
        android:layout_marginTop="-45dp"
        android:layout_marginLeft="47dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_teks"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="36sp"
        />

    <!--Use for backup-->
    <ScrollView
        android:id="@+id/daftar_form"
        android:layout_gravity="center_horizontal"
        android:layout_width="284dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_daftar_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/daftar_button"
                android:textColor="#667c80"
                android:background="@drawable/background_button_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/daftar_teks"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/atau_daftar"
                android:text="atau"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/google_daftar_button"
                android:textColor="#667c80"
                android:background="@drawable/background_button_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar_dengan_google"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>